# LightRAG

./: .env  .gitignore  README.md  openai_test.py  pyproject.toml
examples/: lightrag_openai_demo.py
lightrag/api/: lightrag_server.py  run_with_gunicorn.py
lightrag/api/webui/: index.html
lightrag/api/webui/assets/: _basePickBy-CWimm12a.js  _baseUniq-CCEPA07I.js  architectureDiagram-IEHRJDOE-5vE9HA9M.js  blockDiagram-JOT3LUYC-VW-VukN0.js  c4Diagram-VJAJSXHY-ux2RZSrE.js  chunk-4BMEZGHF-DR1Wl32o.js  chunk-A2AXSNBT-OmGNZt9d.js  chunk-AEK57VVT-B7x3Pve9.js  chunk-D6G4REZN-CD020SIt.js  chunk-RZ5BOZE2-CWhNruFf.js  chunk-XZIHB7SX-D2oeqE_c.js  classDiagram-v2-COTLJTTW-DkQRiODI.js  clone-DI2szP-E.js  dagre-OKDRZEBW-HydaYpsl.js  diagram-SSKATNLV-BxTT-Bh3.js  diagram-VNBRO52H-Bz-Kp7FY.js  erDiagram-Q7BY3M3F-BGZRT0wZ.js  feature-documents-DhMV-O2a.js  feature-graph-nivEnXop.js  feature-retrieval-nggQ6cXg.js  flowDiagram-4HSFHLVR-CEEF31bQ.js  ganttDiagram-APWFNJXF-DpRUhLxB.js  gitGraphDiagram-7IBYFJ6S-Bg6d0acF.js  graph-C3tyeiNz.js  index-Cnz_x0cJ.js  index-DLQnlJVM.js  infoDiagram-PH2N3AL5-Bxhw3hTd.js  journeyDiagram-U35MCT3I-CSo50QsO.js  kanban-definition-NDS4AKOZ-w20xdpHC.js  layout-BZaJUGC7.js  markdown-vendor-DGh-MUMT.js  mermaid-vendor-qsQRkmIX.js  mindmap-definition-ALO5MXBD-Dxm7NlZt.js  pieDiagram-IB7DONF6-Bi_OggSU.js  quadrantDiagram-7GDLP6J5-DH7I3aKr.js  radar-MK3ICKWK-D0erpaRM.js  requirementDiagram-KVF5MWMF-QeuP7V-e.js  sankeyDiagram-QLVOVGJD-tnRG6Gxy.js  (+5 more)
lightrag/llm/: openai.py
lightrag_webui/: README.md
lightrag_webui/src/features/: SiteHeader.tsx
